# ropt

./: .gitignore  .readthedocs.yaml  README-PyPI.md  README.md  mkdocs.yml  pyproject.toml  scipy.md  versions.json
.github/: dependabot.yml
.github/workflows/: build-docs.yml  github-pages.yml  release.yml  static-checks.yml  tests.yml
0.1/: index.html  objects.inv
0.1/reference/optimization/: index.html
0.1/reference/optimization_steps/: index.html
0.1/reference/optimizer_backends/: index.html
0.1/reference/plugins/: index.html
0.1/reference/realization_filters/: index.html
0.1/reference/results/: index.html
0.1/search/: search_index.json
0.1/usage/running/: index.html
0.10/: 404.html  index.html  objects.inv
0.10/reference/default_function_transform_plugin/: index.html
0.10/reference/default_plan_plugin/: index.html
0.10/reference/default_realization_filter_plugin/: index.html
0.10/reference/enopt_config/: index.html
0.10/reference/enums/: index.html
0.10/reference/evaluator/: index.html
0.10/reference/external_optimizer_plugin/: index.html
0.10/reference/function_transform_plugins/: index.html
0.10/reference/optimization/: index.html
0.10/reference/plan/: index.html
0.10/reference/plan_config/: index.html
0.10/reference/plan_plugins/: index.html
0.10/reference/plan_runner/: index.html
0.10/search/: search_index.json
0.11/reference/enums/: index.html
0.11/search/: search_index.json
0.12/: 404.html  index.html
0.12/search/: search_index.json
0.13/: index.html  objects.inv
0.13/search/: search_index.json
0.14/: objects.inv
0.14/search/: search_index.json
0.15/: objects.inv
0.15/search/: search_index.json
0.16/search/: search_index.json
0.17/: 404.html  objects.inv
0.18/: objects.inv
0.18/search/: search_index.json
0.19/: 404.html  index.html  objects.inv
0.19/search/: search_index.json
0.2/: 404.html  index.html  objects.inv
0.20/: 404.html  index.html
0.20/search/: search_index.json
0.21/: 404.html  objects.inv
0.21/search/: search_index.json
0.22/: index.html  objects.inv
0.22/search/: search_index.json
0.23/: 404.html
0.24/search/: search_index.json
0.25/: 404.html
0.25/search/: search_index.json
0.26/: objects.inv
0.26/search/: search_index.json
0.27/: 404.html  objects.inv
0.27/search/: search_index.json
0.27/stylesheets/: extra.css
0.28/: index.html
0.28/search/: search_index.json
0.28/tutorials/: index.html
0.3/: 404.html  index.html  objects.inv
0.3/search/: search_index.json
0.4/: 404.html  index.html
0.4/search/: search_index.json
0.5/: index.html
0.6/: index.html
0.6/search/: search_index.json
0.7/: 404.html  index.html  objects.inv
0.7/search/: search_index.json
0.8/: 404.html  index.html
0.9/: 404.html  objects.inv
dev/: 404.html  index.html  objects.inv
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/tutorials/: index.html
docs/: index.md
docs/reference/: backend.md  basic_optimizer.md  config.md  context.md  core.md  default_compute_steps_plugins.md  default_evaluator_plugins.md  default_event_handler_plugins.md  default_function_estimator_plugin.md  default_function_transforms.md  default_operation_plugins.md  default_plan_objects.md  default_plan_plugin.md  default_plugins.md  default_realization_filter_plugin.md  default_realization_filters.md  default_workflow_objects.md  default_workflow_plugins.md  enopt_config.md  enums.md  evaluation.md  evaluator.md  event_handler_plugins.md  events.md  exceptions.md  exit_info.md  external_optimizer_plugin.md  function_estimator.md  function_estimator_plugins.md  function_transform_plugins.md  function_transforms.md  operation_plugins.md  optimization.md  optimization_steps.md  optimizer_plugins.md  plan.md  plan_config.md  plan_plugins.md  plan_runner.md  plans.md  (+26 more)
docs/snippets/: scipy.md
docs/tutorials/: constrained.md  deterministic.md  ensemble.md  function_evaluator.md  index.md  rosenbrock_basic.md  rosenbrock_constrained.md  rosenbrock_deterministic.md  rosenbrock_function.md  rosenbrock_workflow.md  workflow.md
docs/usage/: background.md  basic.md  basic_optimizer.md  configuration.md  domain_transforms.md  evaluation.md  evaluation_callbacks.md  evaluator_callback.md  exit_info.md  function_estimators.md  gradients.md  installation.md  logging.md  parallel.md  quickstart.md  realization_filters.md  results.md  robust_optimization.md  running.md  transforms.md  workflows.md
examples/: async_evaluator.py  constrained.py  de_linear.py  de_nonlinear.py  deterministic.py  differential_evolution.py  discrete.py  ensemble.py  function_evaluator.py  hpc.py  nested.py  nested_hpc.py  nested_multiprocess.py  parallel_evaluator.py  rosenbrock.py  rosenbrock_async.py  rosenbrock_basic.py  rosenbrock_constrained.py  rosenbrock_deterministic.py  rosenbrock_ensemble.py  rosenbrock_ensemble_function.py  rosenbrock_ensemble_merged.py  rosenbrock_function.py  rosenbrock_threads.py  rosenbrock_workflow.py  workflow.py
examples/script_optimizer/: rosenbrock.py  run.py
src/ropt/: __init__.py  _logging.py  _utils.py  enums.py  evaluation.py  evaluator.py  events.py  exceptions.py  exit_info.py  optimizer.py
tests/: conftest.py  test_asyncio.py  test_backend_external.py  test_concurrent.py  test_config.py  test_doc.py  test_ensemble_gradient.py  test_evaluation_executors.py  test_evaluation_servers.py  test_event_dispatcher.py  test_event_server.py  test_examples.py  test_exit_info.py  test_external_optimizers.py  test_failed_realizations.py  test_function_estimators.py  test_function_transforms.py  test_logging.py  test_netcdf.py  test_optimizer.py  test_pandas.py  test_parsl.py  test_plan.py  test_plugins.py  test_realization_failures.py  test_realization_filters.py  test_result_table.py  test_results.py  test_results_data_frame.py  test_samplers.py  test_scheduler.py  test_scipy_backend.py  test_scipy_optimizers.py  test_scipy_optimizers_de.py  test_scipy_samplers.py  test_server.py  test_table_handler.py  test_workflow.py  test_workflows.py  test_xarray.py
(+906 files in other folders)
